--- a/nptel_result_system/hod_config.json
+++ b/nptel_result_system/hod_config.json
@@ -1,8 +1,8 @@
 [
     {
-        "name": "Divya Chhabra",
-        "department": "CSE",
-        "email": "aa"
+        "name": "Dr. Sandeep Kad",
+        "department": "Computer Science and Engineering",
+        "email": "hod_cse"
     },
     {
         "name": "Rahul Sharma",
